Bug 1543482 - Add the irregular-area flag for frames with masks and clip paths. r=mattwoodrow,botond

This will force APZ to do a main-thread hit-test for the cases where the
shapes are too complex to easily send to the compositor.

Differential Revision: https://phabricator.services.mozilla.com/D27455

--HG--
extra : moz-landing-system : lando